--- a/.gitignore
+++ b/.gitignore
@@ -7,12 +7,21 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependencias
 node_modules
+
+# Builds
 dist
 dist-ssr
 *.local
 
-# Editor directories and files
+# Archivos de entorno
+.env
+.env.local
+.env.development
+.env.production
+
+# Configuración de editores
 .vscode/*
 !.vscode/extensions.json
 .idea
@@ -22,3 +31,4 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
